@Condition and @Description + polish

--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -6161,24 +6161,7 @@ Nevertheless, this one is only intended to be used for creating your own annotat
 
 
 [[beans-java-basic-concepts]]
-==== Basic concepts: @Bean and `@Configuration`
-
-.Full @Configuration vs 'lite' @Beans mode?
-****
-When `@Bean` methods are declared within classes that are __not__ annotated with
-`@Configuration` they are referred to as being processed in a 'lite' mode. For example,
-bean methods declared in a `@Component` or even in a __plain old class__ will be
-considered 'lite'.
-
-Unlike full `@Configuration`, lite `@Bean` methods cannot easily declare inter-bean
-dependencies. Usually one `@Bean` method should not invoke another `@Bean` method when
-operating in 'lite' mode.
-
-Only using `@Bean` methods within `@Configuration` classes is a recommended approach of
-ensuring that 'full' mode is always used. This will prevent the same `@Bean` method from
-accidentally being invoked multiple times and helps to reduce subtle bugs that can be
-hard to track down when operating in 'lite' mode.
-****
+==== Basic concepts: @Bean and @Configuration
 
 The central artifacts in Spring's new Java-configuration support are
 `@Configuration`-annotated classes and `@Bean`-annotated methods.
@@ -6222,6 +6205,22 @@ The `@Bean` and `@Configuration` annotations will be discussed in depth in the s
 below. First, however, we'll cover the various ways of creating a spring container using
 Java-based configuration.
 
+.Full @Configuration vs 'lite' @Beans mode?
+****
+When `@Bean` methods are declared within classes that are __not__ annotated with
+`@Configuration` they are referred to as being processed in a 'lite' mode. For example,
+bean methods declared in a `@Component` or even in a __plain old class__ will be
+considered 'lite'.
+
+Unlike full `@Configuration`, lite `@Bean` methods cannot easily declare inter-bean
+dependencies. Usually one `@Bean` method should not invoke another `@Bean` method when
+operating in 'lite' mode.
+
+Only using `@Bean` methods within `@Configuration` classes is a recommended approach of
+ensuring that 'full' mode is always used. This will prevent the same `@Bean` method from
+accidentally being invoked multiple times and helps to reduce subtle bugs that can be
+hard to track down when operating in 'lite' mode.
+****
 
 
 [[beans-java-instantiating-container]]
@@ -6636,6 +6635,30 @@ annotation accepts a String array for this purpose.
 ----
 
 
+[[beans-java-bean-description]]
+===== Bean description
+Sometimes it is helpful to provide a more detailed textual description of a bean. This can
+be particularly useful when beans are exposed (perhaps via JMX) for monitoring purposes.
+
+To add a description to a `@Bean` the
+{javadoc-baseurl}/org/springframework/context/annotation/Description.html[`@Description`]
+annotation can be used:
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	@Configuration
+	public class AppConfig {
+
+		@Bean
+		**@Desciption("Provides a basic example of a bean")**
+		public Foo foo() {
+			return new Foo();
+		}
+
+	}
+----
+
 
 [[beans-java-configuration-annotation]]
 ==== Using the @Configuration annotation
@@ -7011,6 +7034,48 @@ way, navigating `@Configuration` classes and their dependencies becomes no diffe
 than the usual process of navigating interface-based code.
 --
 
+
+[[beans-java-conditional]]
+===== Conditionally including @Configuration classes or @Beans
+It is often useful to conditionally enable to disable a complete `@Configuration` class
+or even individual `@Bean` methods based on some arbitrary system state. One common
+example of this it to use the `@Profile` annotation to active beans only when a specific
+profile has been enabled in the Spring `Environment` (see <<beans-definition-profiles>>
+for details).
+
+The `@Profile` annotation is actually implemented using a much more flexible annotation
+called {javadoc-baseurl}/org/springframework/context/annotation/Conditional.html[`@Conditional`].
+The `@Conditional` annotation indicates specific
+`org.springframework.context.annotation.Condition` implementations that should be
+consulted before a `@Bean` is registered.
+
+Implementations of the `Condition` interface simply provide a `matches(...)`
+implementation that returns `true` or `false`. For example, here is the actual
+`Condition` implementation used for `@Profile`:
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	@Override
+	public boolean matches(ConditionContext context, AnnotatedTypeMetadata metadata) {
+		if (context.getEnvironment() != null) {
+			// Read the @Profile annotation attributes
+			MultiValueMap<String, Object> attrs = metadata.getAllAnnotationAttributes(Profile.class.getName());
+			if (attrs != null) {
+				for (Object value : attrs.get("value")) {
+					if (context.getEnvironment().acceptsProfiles(((String[]) value))) {
+						return true;
+					}
+				}
+				return false;
+			}
+		}
+		return true;
+	}
+----
+
+See the {javadoc-baseurl}/org/springframework/context/annotation/Conditional.html[
+@Conditional Javadoc] for more detail.
 
 [[beans-java-combining]]
 ===== Combining Java and XML configuration
