--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -744,7 +744,7 @@ TODO
 * proxy without default constructor
 * async rest
 * @Conditional <<beans-java-conditional>>
-* @RestController
+* @RestController <<mvc-ann-restcontroller>>
 * @Description annotation <<beans-java-bean-description>>
 * Timezone support in MVC
 * Java EE updates
@@ -28760,6 +28760,20 @@ As with `@RequestBody`, Spring converts the returned object to a response body b
 an `HttpMessageConverter`. For more information on these converters, see the previous
 section and <<rest-message-conversion,Message Converters>>.
 
+[[mvc-ann-restcontroller]]
+===== Creating REST Controllers with the @RestController annotation
+
+It's a very common use case to have Controllers implement a REST API, thus serving only
+JSON, XML or custom MediaTypes content. Instead of annotating all your @RequestMapping
+methods with @ResponseBody, you can annotate your Controller with @RestController.
+
+{javadoc-baseurl}org/springframework/web/bind/annotation/RestController.html[@RestController]
+is a stereotype annotation that implies @ResponseBody on your Controller class. More than
+that, it gives more meaning to your Controller and also may carry additional semantics
+in future releases of the framework.
+
+You may then assist those REST Controllers using @ControllerAdvice for resolving custom
+REST exceptions. See the <<mvc-ann-controller-advice>> section for more details.
 
 [[mvc-ann-httpentity]]
 ===== Using HttpEntity<?>
