--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -760,7 +760,7 @@ TODO
 * bill of materials POM <<overview-maven-bom>>
 * java 8 (@Repeatable, date time)
 * messaging
-* meta-annotation overrides
+* meta-annotation overrides <<beans-meta-annotations>>
 * proxy without default constructor
 * async rest
 * @Conditional <<beans-java-conditional>>
@@ -5594,6 +5594,55 @@ supported as a marker for automatic exception translation in your persistence la
 
 
 
+[[beans-meta-annotations]]
+==== Meta-annotations
+Many of the annotations provided by Spring can be used to create "meta-annotations" in
+your own code. A meta-annotation is simply an annotation, that is itself annotated. For
+example, The `@Service` annotation mentioned above is in fact a meta-annotation since the
+definition is annotated with `@Component`:
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	@Target({ElementType.TYPE})
+	@Retention(RetentionPolicy.RUNTIME)
+	@Documented
+	**@Component** // Spring will see this and treat @Service in the same way as @Component
+	public @interface Service {
+
+		// ....
+
+	}
+----
+
+Meta-annotations can also be used to combine several Spring annotations into a single
+convenient stereotype. For example, the `@RestController` annotation from Spring MVC is a
+meta-annotation of `@Controller` and `@ResponseBody`.
+
+With the exception of `value()`, meta-annotations may redeclare attributes from the
+source annotation to allow user customization. This can be particularly useful when you
+want to only expose a subset of the source annotation attributes. For example, here is a
+custom `@Scope` meta-annotation that defines `session` scope, but still allows
+customization of the `proxyMode`.
+
+
+[source,java,indent=0]
+[subs="verbatim,quotes"]
+----
+	@Target({ElementType.TYPE})
+	@Retention(RetentionPolicy.RUNTIME)
+	@Documented
+	**@Scope("session")**
+	public @interface SessionScope {
+
+		ScopedProxyMode proxyMode() default ScopedProxyMode.DEFAULT
+
+	}
+----
+
+
+
+
 [[beans-scanning-autodetection]]
 ==== Automatically detecting classes and registering bean definitions
 Spring can automatically detect stereotyped classes and register corresponding
@@ -6349,11 +6398,12 @@ definitions within the container. `AnnotationConfigApplicationContext` exposes t
 
 [NOTE]
 ====
-Remember that `@Configuration` classes are meta-annotated with `@Component`, so they are
-candidates for component-scanning! In the example above, assuming that `AppConfig` is
-declared within the `com.acme` package (or any package underneath), it will be picked up
-during the call to `scan()`, and upon `refresh()` all its `@Bean` methods will be
-processed and registered as bean definitions within the container.
+Remember that `@Configuration` classes are <<beans-meta-annotations,meta-annotated>>
+with `@Component`, so they are candidates for component-scanning! In the example above,
+assuming that `AppConfig` is declared within the `com.acme` package (or any package
+underneath), it will be picked up during the call to `scan()`, and upon `refresh()` all
+its `@Bean` methods will be processed and registered as bean definitions within the
+container.
 ====
 
 
@@ -21770,9 +21820,9 @@ used if no specifically qualified PlatformTransactionManager bean is found.
 [[tx-custom-attributes]]
 ===== Custom shortcut annotations
 If you find you are repeatedly using the same attributes with `@Transactional` on many
-different methods, then Spring's meta-annotation support allows you to define custom
-shortcut annotations for your specific use cases. For example, defining the following
-annotations
+different methods, then <<beans-meta-annotations,Spring's meta-annotation support>> allows
+you to define custom shortcut annotations for your specific use cases. For example,
+defining the following annotations
 
 [source,java,indent=0]
 [subs="verbatim,quotes"]
@@ -44947,12 +44997,12 @@ using the aspectj mode in this case.
 The caching abstraction allows you to use your own annotations to identify what method
 trigger cache population or eviction. This is quite handy as a template mechanism as it
 eliminates the need to duplicate cache annotation declarations (especially useful if the
-key or condition are specified) or if the foreign imports ( `org.springframework`) are
+key or condition are specified) or if the foreign imports (`org.springframework`) are
 not allowed in your code base. Similar to the rest of the
 <<beans-stereotype-annotations,stereotype>> annotations, both `@Cacheable` and
-`@CacheEvict` can be used as meta-annotations, that is annotations that can annotate
-other annotations. To wit, let us replace a common `@Cacheable` declaration with our
-own, custom annotation:
+`@CacheEvict` can be used as <<beans-meta-annotations,meta-annotations>>, that is
+annotations that can annotate other annotations. To wit, let us replace a common
+`@Cacheable` declaration with our own, custom annotation:
 
 [source,java,indent=0]
 [subs="verbatim,quotes"]
